assets/less/icons.less
[class^="edware-icon-"],
[class*=" edware-icon-"] {
  display: inline-block;
  width: 14px;
  height: 14px;
  line-height: 14px;
  vertical-align: text-bottom;
  background-image: url('../images/nav_icons.png');
  background-position: 14px 14px;
  background-repeat: no-repeat !important;
}

.edware-icon-downpoint {
  background-position: -2px -51px;
}

[class^="edware-icon-header-"],
[class*=" edware-icon-header-"] {
  background-image: url('../images/header_nav_icons.png');
}
.edware-icon-header-cog {
  background-position: 0 0;
}
.edware-icon-header-resources {
  background-position: 0 -19px;
}
.edware-icon-header-help {
  background-position: 0 -37px;
}

[class^="edware-icon-globalheader-"],
[class*=" edware-icon-globalheader-"] {
  background-image: url('../images/globalheader_arrow.png');
}
.edware-icon-globalheader-downarrow {
  background-position: 0 0;
}

.edware-icon-globalheader-uparrow {
  background-position: 0 0;
}

//icons
.edware-icon-question-mark {
  background-image: url("../images/landing_page.png");
  background-position: 0px -162px;
}

.edware-icon-info-mark {
  background-image: url('../images/nav_icons.png');
  background-position: 0 -18px;
}

.edware-icon-question-mark-grayscale {
  background-image: url("../images/landing_page.png");
  background-position: -18px -162px;
}

.edware-icon-globe-blue {
  background-image: url("../images/landing_page.png");
  background-position: 0px -144px;
}

.edware-icon-globe-grayscale {
  background-image: url("../images/landing_page.png");
  background-position: -17px -144px;
}

.edware-icon-downarrow-blue {
  background-image: url("../images/landing_page.png");
  background-position: -35px -141px;
}

.edware-icon-downarrow-grayscale {
  background-image: url("../images/landing_page.png");
  background-position: -35px -159px;
}

.edware-icon-legend {
  background-image: url('../images/iconLegend.png');
  background-position: 0px 0px !important;
  width: 15px;
  height: 15px;
}

.edware-icon-align-off {
  background-image: url('../images/iconAlign2.png');
  background-position: 0px 0px !important;
  width: 25px;
  height: 22px;
  vertical-align: middle;
  margin-right: 15px;
}

.edware-icon-align-on {
  background-image: url('../images/iconAlign1.png');
  background-position: 0px 0px !important;
  width: 25px;
  height: 22px;
  vertical-align: middle;
  margin-right: 15px;
}

.edware-icon-clear {
    background-image: url('../images/iconClear.png');
    background-position: 0px 0px !important;
    width: 14px;
    height: 14px;
}

.edware-icon-pie, .edware-icon-MATH-1 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: 0px 0px !important;
  width: 34px;
  height: 36px;
}

.edware-icon-compass, .edware-icon-MATH-2 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: -33px 0px !important;
  width: 34px;
  height: 36px
}

.edware-icon-shadow, .edware-icon-MATH-3 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: -66px 0px !important;
  width: 34px;
  height: 36px
}

.edware-icon-book, .edware-icon-ELA-1 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: 0px -38px !important;
  width: 34px;
  height: 36px;
}

.edware-icon-pen, .edware-icon-ELA-2 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: -34px -38px !important;
  width: 34px;
  height: 36px;
}

.edware-icon-ear, .edware-icon-ELA-3 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: -67px -38px !important;
  width: 34px;
  height: 36px;
}

.edware-icon-magnifier, .edware-icon-ELA-4 {
  background-image: url('../images/icons/claim_icons.png')!important;
  background-position: 0px -75px !important;
  width: 34px;
  height: 36px;
}

.edware-icon-perf-level-1 {
  background-image: url('../images/icons/perf_level_icons.png')!important;
  background-position: 0px 0px !important;
  width: 20px;
  height: 20px;
}

.edware-icon-perf-level-2 {
  background-image: url('../images/icons/perf_level_icons.png')!important;
  background-position: -20px 0px !important;
  width: 20px;
  height: 20px;
}

.edware-icon-perf-level-3 {
  background-image: url('../images/icons/perf_level_icons.png')!important;
  background-position: -40px 0px !important;
  width: 20px;
  height: 20px;
}

.edware-icon-large-perf-level-1 {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px 0px !important;
  width: 34px;
  height: 30px;
}

.edware-icon-large-perf-level-2 {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -40px !important;
  width: 34px;
  height: 30px;
}

.edware-icon-large-perf-level-3 {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -80px !important;
  width: 34px;
  height: 30px;
}

.edware-icon-small-perf-level-1 {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -120px !important;
  width: 20px;
  height: 18px;
}

.edware-icon-small-perf-level-2 {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -148px !important;
  width: 20px;
  height: 18px;
}

.edware-icon-small-perf-level-3 {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -176px !important;
  width: 20px;
  height: 18px;
}

.edware-icon-collapse-expand-plus {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -204px !important;
  width: 21px;
  height: 21px;
  cursor: pointer;
}

.edware-icon-collapse-expand-minus {
  background-image: url('../images/icons/iab.png')!important;
  background-position: 0px -235px !important;
  width: 21px;
  height: 21px;
  cursor: pointer;
}

.edware-icon-ALD-color {
  width: 14px;
  height: 14px;
}

.edware-icon-warning {
  background-image: url('../images/icons/alert_icon.png')!important;
  background-position: 0px 0px !important;
  width: 14px;
  height: 15px;
}

.edware-icon-nav-downarrow-blue {
  background-image: url('../images/icons/arrowDown.png')!important;
  background-position: 0px 2px;
}

.edware-icon-nav-uparrow-blue {
  background-image: url('../images/icons/arrowUp.png') !important;
  background-position: 0px 2px !important;
}

// labels

[class^="edware-label-"], [class*="edware-label-"] {
                            background-color: @color-B26 !important;
                            color: @color-white !important;
                            font-size: 12px;
                            padding: 2px 12px;
                          }

.edware-label-accommodation {
  margin-right: 5px;
  margin-top: 7px;
}

.edware-icon-report-info {
  background-image: url('../images/nav_icons.png');
  width: 15px;
  background-position: 0px -18px;
}

.edware-icon-download {
  background-image: url('../images/nav_icons.png');
  background-position: 0px -36px;
  width: 20px;
}

.edware-icon-checkbox {
    background-image: url("../images/iconCheckbox.png");
    background-position: 0px 0px;
}

.edware-icon-pdf {
  background-image: url("../images/pdf_icon.png");
  background-position: 0px 0px;
}

.edware-icon-asterisk {
    background-image: url("../images/asterisk_icon.png");
    background-position: 0px 0px;
}

.edware-icon-arrow {
    background-image: url("../images/CpopLegendArrow.png");
    background-position: 0px 0px;
}

.edware-icon-partial, .edware-icon-invalid, .edware-icon-standardized {
    background-image: url("../images/icons/invalidPartialIcons/sprite.png");
    width: 22px;
    height: 22px;
    background-position-x: -30px;
}

.edware-icon-standardized {
    background-position-y: -2px;
}

.edware-icon-invalid {
    background-position-y: -32px;
}

.edware-icon-partial {
    background-position-y: -62px;
}

.edware-icon-large {
    width: 26px;
    height: 26px;
    background-position-x: 0px;
    &.edware-icon-standardized {
        background-position-y: 0px;
    }

    &.edware-icon-invalid {
        background-position-y: -30px;
    }

    &.edware-icon-partial {
        background-position-y: -60px;
    }
}

.edware-icon-small {
    width: 18px;
    height: 18px;
    background-position-x: -56px;
    &.edware-icon-standardized {
        background-position-y: -4px;
    }

    &.edware-icon-invalid {
        background-position-y: -34px;
    }

    &.edware-icon-partial {
        background-position-y: -64px;
    }
}

